@@ -2,6 +2,7 @@ package com.example.demo.application.service;
 
 import com.example.demo.api.payload.request.RentRequest;
 import com.example.demo.api.payload.response.RentResponse;
+import com.example.demo.application.enums.StatusType;
 import com.example.demo.application.domain.BookEntity;
 import com.example.demo.application.domain.RentEntity;
 import com.example.demo.application.domain.UserEntity;
@@ -18,7 +19,6 @@ import java.util.List;
 @RequiredArgsConstructor
 @Service
 @Transactional
-
 
 
 public class RentServiceImpl implements RentService {
@@ -40,11 +40,10 @@ public class RentServiceImpl implements RentService {
         }
 
 
-
         UserEntity userEntity = userRepository.findById(createRentRequest.getUserId())
                 .orElseThrow(() -> new RuntimeException("User not found, id: " + createRentRequest.getUserId()));
 
-        bookEntity.setRentCount(bookEntity.getRentCount()+1);
+        bookEntity.setRentCount(bookEntity.getRentCount() + 1);
         bookRepository.save(bookEntity);
 
         RentEntity rentEntity = RentEntity.builder()
@@ -56,7 +55,7 @@ public class RentServiceImpl implements RentService {
         RentEntity saved = rentRepository.save(rentEntity);
 
 
-        RentResponse showrentResponse = RentResponse.builder()
+        return RentResponse.builder()
                 .bookId(saved.getBookId())
                 .userId(saved.getUserId())
                 .bookName(bookEntity.getName())
@@ -66,24 +65,18 @@ public class RentServiceImpl implements RentService {
                 .status(createRentRequest.getStatus())
                 .userName(userEntity.getName())
                 .build();
-
-        return showrentResponse;
     }
-
 
 
     @Override
     public RentResponse deleteRent(long userId, long bookId) {
 
-
-        //List<RentEntity> rents = rentRepository.findByUserIdAndBookId(userId, bookId);
         List<RentEntity> rents = rentRepository.findByUserIdAndBookIdOrderByRentDateAsc(userId, bookId);
-
 
         if (rents.isEmpty()) {
             throw new RuntimeException("No rent record found for userId: " + userId + " and bookId: " + bookId);
         }
-        RentEntity oldestRent = rents.get(0);
+        RentEntity oldestRent = rents.getFirst();
         BookEntity bookEntity = bookRepository.findById(bookId)
                 .orElseThrow(() -> new RuntimeException("Book not found, id: " + bookId));
 
@@ -102,13 +95,8 @@ public class RentServiceImpl implements RentService {
                 .bookCount(bookEntity.getBookCount())
                 .rentCount(bookEntity.getRentCount())
                 .author(bookEntity.getAuthor())
-                .status(statusType.RETURN.name()) // delet means return....
+                .status(StatusType.valueOf(StatusType.RETURN.name())) // delete means return....
                 .userName(userEntity.getName())
                 .build();
-        //return null;
-    }
-
-    public enum statusType {
-        RENT, RETURN
     }
 }
